applets/devicenotifier: Check StorageAccess being null

It is also connected to OpticalDrive which is not a storage access.

BUG: 522051


(cherry picked from commit 78b05931f1e91d4bbdb519977ec17726371e4039)

Co-authored-by: Kai Uwe Broulik <kde@privat.broulik.de>